Fix issue with loading favicons on Firefox
Related to #39

--- a/src/components/Chip/Chip.css
+++ b/src/components/Chip/Chip.css
@@ -56,6 +56,7 @@
   display: inline-block;
   flex-grow: 0;
   flex-shrink: 0;
+  font-size: 0;
   height: 16px;
   margin: 8px;
   pointer-events: none;
